# axioms

./: Cargo.toml  README.md  plot_example.gcode
artifacts/conformal_twist_mapping/: 1_es.typ  2_en.typ  2_es.typ  3_en.typ  3_es.typ  references.bib
crates/engine/: Cargo.toml
crates/engine/src/: generators.rs  grammar.rs  main.rs  transformations.rs
crates/engine/src/grammars/: minimal_complex_math.pest
crates/interactive/: Cargo.toml
crates/interactive/src/: main.rs
src/: camera.rs  common.rs  generators.rs  grammar.rs  lib.rs  main.rs  transformations.rs
src/grammars/: minimal_complex_math.pest
