[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_svg = "0.15.1"
g-code = "0.5.1"
num = "0.4.3"
num-complex = "0.4.6"
pest = "2.7.15"
pest_derive = "2.7.15"
plotters = "0.3.7"
roxmltree = "0.19.0"
svg2gcode = "0.3.3"
svgtypes = "0.13.0"
tinyfiledialogs = "3.9.1"
